    closes: #175832 (longstanding, huh?)

  [ Filippo Giunchedi ]
  * debdiff: handle .udeb files if found in .changes (closes: #215477)
  * debchange: add support for forcing a lower version
    (-b/--force-bad-version) (closes: #251436, #183424)
  * debsign: support for signing .commands files (Closes: #224523)
  * added annotate.sh and annotate.1

 -- Filippo Giunchedi <filippo@debian.org>  Thu, 16 Jun 2005 15:27:30 +0200

devscripts (2.8.14) unstable; urgency=low

  * uscan: fix second showstopper (broken URL parsing) (closes: #301169)

 -- Julian Gilbey <jdg@debian.org>  Thu, 24 Mar 2005 14:33:05 +0000

devscripts (2.8.13) unstable; urgency=low

  * bts: provide --quiet option (closes: #299344)
  * dpkg-depcheck: improve sgml catalog regexp (closes: #295845)
  * uupdate: improve error message (closes: #267317)
  * uscan: fix showstopper (closes: #301177)

 -- Julian Gilbey <jdg@debian.org>  Thu, 24 Mar 2005 09:13:15 +0000

devscripts (2.8.12) unstable; urgency=low

  * bts: allow --mbox etc. options to appear after the show/bugs keyword
    as well as before, and similarly with the "cache" command
  * bts: allow bug numbers to end with a ":" (closes: #300965)
  * debchange: use access rather than stat for checking file permissions
    (closes: #298659); also do same to debi and debuild
  * debdiff: don't hardcode wdiff path
  * debsign: correct obsolete head syntax (closes: #300844)
  * uscan: watch files are now version=3 (should have done this with
    2.8.11, oops)
  * uscan: now support DEHS-style output and --watchfile etc options
  * uscan: also state upstream URL for newer versions (closes: #230813)
  * uscan: handle funny upstream version numbers using multiple groups
    (closes: #282255) and version-number mangling, both for upstream
    version numbers (closes: #266095) and Debian version numbers (closes:
    #261385)
  * uscan: support --rename option to rename file instead of symlinking it
    (closes: #227952)