@@ -401,7 +401,8 @@ exit 0;
 
 =head1 COMMANDS
 
-For full details about the commands, see the L<bts(1)> manpage.
+For full details about the commands, see the BTS documentation.
+L<http://bugs.debian.org/server-control>
 
 =over 4
 
